Fix headline on smaller screens by decreasing padding

--- a/css/main.scss
+++ b/css/main.scss
@@ -94,6 +94,10 @@ $fedora-blue:      #3c6eb4;
     margin-left: 0;
     margin-right: 0;
   }
+  #headlines {
+    text-align: center;
+    padding: 10px;
+  }
   #headline-search {
     width: 100%;
   }
